--- a/microservice-a/src/main/resources/application.properties
+++ b/microservice-a/src/main/resources/application.properties
@@ -7,7 +7,7 @@ mp.messaging.outgoing.generated-price.connector=smallrye-kafka
 mp.messaging.outgoing.generated-price.topic=prices
 mp.messaging.outgoing.generated-price.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-mp.messaging.outgoing.generated-price.ssl.truststore.location=../Certificates/kafka-truststore.jks
+mp.messaging.outgoing.generated-price.ssl.truststore.location=../certs/truststore.jks
 mp.messaging.outgoing.generated-price.ssl.truststore.password=changeit
-mp.messaging.outgoing.generated-price.ssl.keystore.location=../Certificates/kafka-client1.jks
+mp.messaging.outgoing.generated-price.ssl.keystore.location=../certs/microservice-a.keystore.jks
 mp.messaging.outgoing.generated-price.ssl.keystore.password=changeit
