--- a/microservice-b/src/main/resources/application.properties
+++ b/microservice-b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ mp.messaging.incoming.generated-price.connector=smallrye-kafka
 mp.messaging.incoming.generated-price.topic=prices
 mp.messaging.incoming.generated-price.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-mp.messaging.incoming.generated-price.ssl.truststore.location=../Certificates/kafka-client2-truststore.jks
+mp.messaging.incoming.generated-price.ssl.truststore.location=../certs/truststore.jks
 mp.messaging.incoming.generated-price.ssl.truststore.password=changeit
-mp.messaging.incoming.generated-price.ssl.keystore.location=../Certificates/kafka-client2.jks
+mp.messaging.incoming.generated-price.ssl.keystore.location=../certs/microservice-b.keystore.jks
 mp.messaging.incoming.generated-price.ssl.keystore.password=changeit
