Multiple Changes: - Correcting Start-Script Typos - Expand Certificate Creation - Introduce Dataformat for later Microservice to test Homomorphic Encryption - Changed the Topics

--- a/microservice-b/src/main/resources/application.properties
+++ b/microservice-b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.http.port=8081
 kafka.security.protocol=SSL
 kafka.ssl.protocol=TLSv1.3
 mp.messaging.incoming.generated-price.connector=smallrye-kafka
-mp.messaging.incoming.generated-price.topic=prices
+mp.messaging.incoming.generated-price.topic=prices-out
 mp.messaging.incoming.generated-price.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 mp.messaging.incoming.generated-price.ssl.truststore.location=/etc/certs/microservice-b.truststore.jks
@@ -14,7 +14,7 @@ kafka.bootstrap.servers=kafka.default.svc.cluster.local:9092
 
 # Dev-Profile
 %dev.quarkus.http.port=8081
-%dev.kafka.bootstrap.servers=localhost:9093
+%dev.kafka.bootstrap.servers=localhost:9092
 
 %dev.mp.messaging.incoming.generated-price.ssl.truststore.location=../certs/microservice-b.truststore.jks
 %dev.mp.messaging.incoming.generated-price.ssl.truststore.password=changeit
