--- a/microservice-a/src/main/resources/application.properties
+++ b/microservice-a/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 kafka.security.protocol=SSL
 kafka.ssl.protocol=TLSv1.3
 mp.messaging.outgoing.generated-price.connector=smallrye-kafka
-mp.messaging.outgoing.generated-price.topic=prices
+mp.messaging.outgoing.generated-price.topic=prices-in
 mp.messaging.outgoing.generated-price.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 mp.messaging.outgoing.generated-price.ssl.truststore.location=/etc/certs/microservice-a.truststore.jks
@@ -14,7 +14,7 @@ kafka.bootstrap.servers=kafka.default.svc.cluster.local:9092
 
 # Dev-Profile
 %dev.quarkus.http.port=8080
-%dev.kafka.bootstrap.servers=localhost:9093
+%dev.kafka.bootstrap.servers=localhost:9092
 
 %dev.mp.messaging.outgoing.generated-price.ssl.truststore.location=../certs/microservice-a.truststore.jks
 %dev.mp.messaging.outgoing.generated-price.ssl.truststore.password=changeit
