Progress Microservice-C: - Adding Base64 Encoding - Saving Seal-Parameters to file - Reading Seal-Parameters from file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /.vscode
 /certs
 *.tgz
+
+/microservice-c/win32
+/microservice-c/KafkaLib
+/microservice-c/SealLib
+/microservice-c/src/myapp
+
+*.DAT
