--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@
 /microservice-c/win32
 /microservice-c/KafkaLib
 /microservice-c/SealLib
+/microservice-d/win32
+/microservice-d/KafkaLib
+/microservice-d/SealLib
+/microservice-d/CurlLib
 /microservice-c/src/myapp
 
 *.DAT
+*.jks
+*.p12
+*.pem
+*.key
+*.crt
