--- a/Kafka/kubernetesValues.yaml
+++ b/Kafka/kubernetesValues.yaml
@@ -12,3 +12,8 @@ tls:
   truststorePassword: "changeit"
   jksKeystoreKey: "kafka.keystore.jks"
   jksTruststoreKey: "kafka.truststore.jks"
+
+# Set value for the maximum message size to accept incoming message of 60 mb
+
+socketRequestMaxBytes: "62914560"
+maxMessageBytes: "62914560"
