--- a/microservice-a/src/main/resources/application.properties
+++ b/microservice-a/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-
 kafka.security.protocol=SSL
 kafka.ssl.protocol=TLSv1.3
+quarkus.http.limits.max-body-size=50M
 mp.messaging.outgoing.generated-price.connector=smallrye-kafka
 mp.messaging.outgoing.generated-price.topic=prices-in
 mp.messaging.outgoing.generated-price.value.serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -9,13 +9,15 @@ mp.messaging.outgoing.generated-price.ssl.truststore.location=/etc/certs/microse
 mp.messaging.outgoing.generated-price.ssl.truststore.password=${KAFKA_SSL_TRUSTSTORE_PASSWORD}
 mp.messaging.outgoing.generated-price.ssl.keystore.location=/etc/certs/microservice-a.keystore.jks
 mp.messaging.outgoing.generated-price.ssl.keystore.password=${KAFKA_SSL_KEYSTORE_PASSWORD}
+# Increase the max request size to 50 MB
+mp.messaging.outgoing.generated-price.max.request.size=52428800
+mp.messaging.outgoing.generated-price.buffer.memory= 67108864
 
 kafka.bootstrap.servers=kafka.default.svc.cluster.local:9092
 
 # Dev-Profile
 %dev.quarkus.http.port=8080
 %dev.kafka.bootstrap.servers=localhost:9092
-
 %dev.mp.messaging.outgoing.generated-price.ssl.truststore.location=../certs/microservice-a.truststore.jks
 %dev.mp.messaging.outgoing.generated-price.ssl.truststore.password=changeit
 %dev.mp.messaging.outgoing.generated-price.ssl.keystore.location=../certs/microservice-a.keystore.jks
