--- a/microservice-c/helmCharts/Chart.yaml
+++ b/microservice-c/helmCharts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: microservice-c
+name: microservice-d
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
