--- a/microservice-c/helmCharts/templates/serviceaccount.yaml
+++ b/microservice-c/helmCharts/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "microservice-c.serviceAccountName" . }}
+  name: {{ include "microservice-d.serviceAccountName" . }}
   labels:
-    {{- include "microservice-c.labels" . | nindent 4 }}
+    {{- include "microservice-d.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
