--- a/microservice-c/helmCharts/templates/tests/test-connection.yaml
+++ b/microservice-c/helmCharts/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "microservice-c.fullname" . }}-test-connection"
+  name: "{{ include "microservice-d.fullname" . }}-test-connection"
   labels:
-    {{- include "microservice-c.labels" . | nindent 4 }}
+    {{- include "microservice-d.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "microservice-c.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "microservice-d.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
