--- a/microservice-c/helmCharts/values.yaml
+++ b/microservice-c/helmCharts/values.yaml
@@ -1,11 +1,11 @@
-# Default values for microservice-c.
+# Default values for microservice-d.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: "localhost:5000/microservice-c"
+  repository: "localhost:5000/microservice-d"
   tag: "latest"
   pullPolicy: "Always"
 
