--- a/Monitoring/prometheus/values.yaml
+++ b/Monitoring/prometheus/values.yaml
@@ -1,21 +1,18 @@
-# Default values for microservice-a.
+# Default values for prometheus.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: "localhost:5000/microservice-a"
-  tag: "latest"
-  pullPolicy: "Always"
+  repository: "prom/prometheus"
+  tag: "v2.21.0"
 
-kafka:
-  truststorePassword: changeit
-  keystorePassword: changeit
-  certsSecretName: certs-microservice-a
-  certsMountPath: /etc/certs
-  truststoreFilename: microservice-a.truststore.jks
-  keystoreFilename: microservice-a.keystore.jks
+service:
+  type: ClusterIP
+  targetPort: 9090
+  port: 9090
+
 
 imagePullSecrets: []
 nameOverride: ""
@@ -32,17 +29,8 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {
-  "prometheus.io/scrape": "true",
-  "prometheus.io/path": "/metrics",
-  "prometheus.io/port": "8080"
-}
-
-podLabels: {
-  "app.kubernetes.io/name": "microservice-a",
-  "app.kubernetes.io/version": "1.0.0",
-  "app": "microservice-a"
-}
+podAnnotations: {}
+podLabels: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -54,11 +42,6 @@ securityContext: {}
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
-
-service:
-  type: NodePort
-  nodePort: 30950
-  port: 8080
 
 ingress:
   enabled: false
@@ -88,11 +71,11 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-#livenessProbe: 
+#livenessProbe:
 #  httpGet:
 #    path: /
 #    port: http
-#readinessProbe: 
+#readinessProbe:
 #  httpGet:
 #    path: /
 #    port: http
@@ -105,17 +88,19 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
+volumes: 
+  - name: prom-config
+    configMap:
+      name: prom-configmap
+      items:
+        - key: "prometheus.yml"
+          path: "prometheus.yml"
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
+volumeMounts:
+  - name: prom-config
+    mountPath: "/etc/prometheus"
+    readOnly: true
 
 nodeSelector: {}
 
