--- a/microservice-a/src/main/resources/application.properties
+++ b/microservice-a/src/main/resources/application.properties
@@ -15,6 +15,9 @@ mp.messaging.outgoing.seal-data.max.request.size=600000000
 mp.messaging.outgoing.seal-data.buffer.memory= 600000000
 kafka.bootstrap.servers=kafka-broker.default.svc.cluster.local:9092
 
+quarkus.micrometer.export.prometheus.path=/metrics
+quarkus.micrometer.export.prometheus.enabled=true
+
 # Dev-Profile
 %dev.quarkus.http.port=8080
 %dev.kafka.bootstrap.servers=localhost:9092
